Fix checkout label text alignment breakpoint

--- a/webroot/css/src/styles.less
+++ b/webroot/css/src/styles.less
@@ -838,7 +838,7 @@ body.checkout {
             .control-label {
                 text-align: right;
             }
-            @media (max-width: @screen-sm-min) {
+            @media (max-width: (@screen-sm-min - 1)) {
                 .control-label {
                     text-align: left;
                 }
